# pi-portal

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.pi  Makefile  PROGRESS.md  Procfile  README.md  SPEC.md  TESTING.md  TEST_RESULTS.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
.pi/extensions/: feedback.ts
backend/: config.py  main.py  pi_client.py  server.py  session_parser.py  websocket.py
config/: starter_prompts.json
docs/: API.md  ARCHITECTURE.md  DOCKER.md  USER_GUIDE.md
frontend/: app.js  error-handler.js  index.html  styles.css
tests/: conftest.py  test_app.py  test_config.py  test_config_integration.py  test_cors.py  test_feedback_extension.py  test_feedback_ui.py  test_health.py  test_pi_client.py  test_pi_client_integration.py  test_procfile.py  test_session_parser.py  test_sessions_api.py  test_starter_prompts.py  test_static_files.py  test_websocket.py
